Update: nama dan bio (fix)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elevenoned - Lightning Hub</title>
+    <title>Elevenoned - MY ACCOUNT</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -591,11 +591,11 @@
 
     <div class="container">
         <section class="profile-section" id="home">
-            <h1 class="profile-name">ELEVENONED</h1>
+            <h1 class="profile-name">WELCOME TO MY ACCOUNT</h1>
             <p class="profile-username">@elevenoned214</p>
             <p class="profile-bio">
-                Content Creator • Web3 Enthusiast • Digital Artist<br>
-                Exploring the electric future of digital culture ⚡
+                Content Creator • Web3 Enthusiast • Community Contribute<br>
+                Just an ordinary person who wants to know about Technology ⚡
             </p>
             <div class="activity-box">
                 <div class="activity-card">
@@ -630,7 +630,7 @@
                 <a href="https://warpcast.com/elevenoned214" class="social-card" target="_blank">
                     <div class="platform-icon">🟣</div>
                     <div class="social-card-inner">
-                        <img src="farcaster.jpg" alt="Farcaster Profile" class="social-image">
+                        <img src="frarcaster.jpg" alt="Farcaster Profile" class="social-image">
                         <div class="social-platform">Farcaster</div>
                     </div>
                 </a>
@@ -655,7 +655,7 @@
     </div>
 
     <footer id="contact">
-        <p>⚡ Just for fun ⚡ © 2025 ELEVENONED</p>
+        <p>⚡ Connection is important ⚡ © 2025 ELEVENONED</p>
     </footer>
 
     <script>
